# tabs_army_creator

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  compile.sh  index.html  juupitijuu.js  the_css.css
src/: lib.rs
