[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["jaankaup <janne.a.kauppinen@student.jyu.fi>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

###[dependencies.wasm-game-of-life]
###features = ["wasm-bindgen"]

[dependencies]
wasm-bindgen = "0.2.63"
rand = { version = "0.7.3", features = ["wasm-bindgen"]} 
#getrandom = { version = "0.1.14", features = ["wasm-bindgen"] }
#lazy_static = "1.4.0"
# wee_alloc = { version = "0.4.5", optional = true }


#### The `console_error_panic_hook` crate provides better debugging of panics by
#### logging them with `console.error`. This is great for development, but requires
#### all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
#### code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
###
#### `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
#### compared to the default allocator's ~10K. It is slower than the default
#### allocator, however.
####
#### Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
###wee_alloc = { version = "0.4.2", optional = true }
###
###[dev-dependencies]
###wasm-bindgen-test = "0.2"
###
###[profile.release]
#### Tell `rustc` to optimize for small code size.
###opt-level = "s"
###
###[package]
###name = "without-a-bundler"
###version = "0.1.0"
###authors = ["The wasm-bindgen Developers"]
###edition = "2018"

###[lib]
###crate-type = ["cdylib"]
###
###[dependencies]
###wasm-bindgen = "0.2.62"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Text',
  'Element',
  'HtmlElement',
  'HtmlButtonElement',
  'HtmlDivElement',
  'Node',
  'NamedNodeMap',
  'Attr',
  'Window',
  'MouseEvent',
  'EventTarget',
  'HtmlCollection',
]


[profile.release]
panic = 'abort'
